--- a/style.css
+++ b/style.css
@@ -7,8 +7,9 @@ body {
 }
 
 h1 {
-    margin-left: 0.5em;
-    margin-top: 0.3em;
+    padding-left: 0.5em;
+    margin: 0;
+    padding-top: 0.3em;
     color: white;
     font-size: 17vw;
     font-family: serif;
