--- a/style.css
+++ b/style.css
@@ -12,7 +12,10 @@ h1 {
     padding-top: 0.3em;
     color: white;
     font-size: 17vw;
-    font-family: serif;
+    font-family: -apple-system, BlinkMacSystemFont,
+        "Segoe UI", "Roboto", "Oxygen",
+        "Ubuntu", "Cantarell", "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
     opacity: 0.95;
     text-shadow: 1px 1px 4px rgba(242, 32, 105, 0.434);
 }
